# git-refs-summary

./: .gitignore  README.md  gemini_diff_summary.py  main.py  pyproject.toml
src/mr_summary/: cli.py
src/refs_summary/: __init__.py  cli.py
