[project]
name = "refs-summary"
version = "0.1.0"
description = "A tool to summarize git diffs using Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.7.0",
]

[project.scripts]
refs-summary = "refs_summary.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
